# image-compressor

./: .clang-format  .clangd  .gitattributes  .gitignore  README.md  bun.lockb  compile_flags.txt  package.json
example/: app.json  package.json  tsconfig.json
example/app/: _layout.tsx  index.tsx
example/components/: ImageDetails.tsx
example/utils/: formatBytes.ts
package/: ImageCompressor.podspec  README.md  app.plugin.js  nitro.json  package.json  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  gradle.properties
package/android/OpenCV/samples/: build.gradle  settings.gradle
package/android/OpenCV/sdk/native/jni/: OpenCV-arm64-v8a.mk  OpenCV-armeabi-v7a.mk  OpenCV-x86.mk  OpenCV.mk  OpenCVConfig.cmake
package/android/OpenCV/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
package/android/OpenCV/sdk/native/jni/abi-armeabi-v7a/: OpenCVModules-release.cmake  OpenCVModules.cmake
package/android/OpenCV/sdk/native/jni/abi-x86/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
package/android/OpenCV/sdk/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules-release.cmake
package/android/src/main/cpp/: ImageCompressor_jni.cpp  ImageCompressor_jni.hpp  JNIUtils.hpp  cpp-adapter.cpp
package/android/src/main/java/com/margelo/nitro/ImageCompressor/: ImageCompressorPackage.java  PhotoLibrary.kt
package/cpp/: FileUtils.cpp  FileUtils.hpp  HybridCompressedImageAsset.cpp  ImageUtils.cpp  (+8 more)
scripts/: build_opencv_android.sh  compile_flags.sh  create-framework-symlinks.js
(+11 files in other folders)
